Update app info for iTunes Store submit

--- a/CCIP/CCIP/Info.plist
+++ b/CCIP/CCIP/Info.plist
@@ -24,7 +24,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>org.coscup.CCIP-iOS-Dev</string>
+			<string>org.coscup.CCIP-iOS</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>ccip</string>
@@ -32,7 +32,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
