add iRate and setup

--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -12,4 +12,5 @@ target 'CCIP' do
   pod 'ICViewPager', :git => 'https://github.com/FrankWu100/ICViewPager'
   pod 'STPopup', '~> 1.7'
   pod 'ColorArt', '0.1.1'
+  pod 'iRate', '~> 1.11'
 end
