--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -14,4 +14,5 @@ target 'CCIP' do
   pod 'ColorArt', '0.1.1'
   pod 'iRate', :git => 'https://github.com/FrankWu100/iRate'
   pod 'RGCardViewLayout'
+  pod 'iCarousel', '~> 1.8'
 end
