--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -17,4 +17,5 @@ target 'CCIP' do
   pod 'BLKFlexibleHeightBar'
   pod 'SDWebImage', '~>3.8'
   pod 'Shimmer', '~>1.0'
+  pod 'MMMarkdown', '~> 0.5'
 end
