--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -21,4 +21,5 @@ target 'CCIP' do
   pod 'Shimmer', '~>1.0'
   pod 'MMMarkdown', '~> 0.5'
   pod 'CPDAcknowledgements', '~> 1.0'
+  pod 'NJKWebViewProgress', '~> 0.2'
 end
