freshen contributors.json properties

--- a/CCIP/CCIP/Project_Info_and_Contributors.json
+++ b/CCIP/CCIP/Project_Info_and_Contributors.json
@@ -68,7 +68,7 @@
 			"index": 2,
 			"name": "Haraguroicha",
 			"nick_name": "腹黒い茶",
-			"email": "m50gbmb@gmail.com",
+			"email": "haraguroicha@tipsy.coffee",
 			"role": "iOS Developer",
 			"github": {
 				"login": "Haraguroicha",
@@ -116,7 +116,7 @@
 			"index": 5,
 			"name": "曉晰",
 			"nick_name": "Estelle Chen",
-			"email": "tiger0319@gmail.com",
+			"email": "moomyiting@gmail.com",
 			"role": "Interface Design",
 			"github": {
 				"login": "moomyiting",
