--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -22,4 +22,5 @@ target 'CCIP' do
   pod 'MMMarkdown', '~> 0.5'
   pod 'CPDAcknowledgements', '~> 1.0'
   pod 'NJKWebViewProgress', '~> 0.2'
+  pod 'iVersion', :git => 'https://github.com/FrankWu100/iVersion'
 end
