--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -8,15 +8,15 @@ target 'CCIP' do
   use_frameworks!
 
   # Pods for CCIP
-  pod 'OneSignal'
+  pod 'OneSignal', '~> 1.13'
   pod 'UICKeyChainStore', '~> 2.1'
-  pod 'Google/Analytics'
+  pod 'Google/Analytics', '~> 3.0'
   pod 'ICViewPager', :git => 'https://github.com/FrankWu100/ICViewPager'
   pod 'STPopup', '~> 1.7'
   pod 'ColorArt', '0.1.1'
   pod 'iRate', '~> 1.11'
   pod 'iCarousel', '~> 1.8'
-  pod 'BLKFlexibleHeightBar'
+  pod 'BLKFlexibleHeightBar', '~> 1.0'
   pod 'SDWebImage', '~>3.8'
   pod 'Shimmer', '~>1.0'
   pod 'MMMarkdown', '~> 0.5'
