--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -23,4 +23,5 @@ target 'CCIP' do
   pod 'CPDAcknowledgements', '~> 1.0'
   pod 'NJKWebViewProgress', '~> 0.2'
   pod 'iVersion', :git => 'https://github.com/FrankWu100/iVersion'
+  pod 'AFNetworking', '~> 3.1'
 end
