--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -10,7 +10,7 @@ target 'CCIP' do
   # Pods for CCIP
   pod 'OneSignal', '~> 1.13'
   pod 'UICKeyChainStore', '~> 2.1'
-  pod 'Google/Analytics', '~> 3.0'
+  pod 'Google/Analytics', '~> 3.0.3'
   pod 'ICViewPager', :git => 'https://github.com/FrankWu100/ICViewPager'
   pod 'STPopup', '~> 1.7'
   pod 'ColorArt', '0.1.1'
@@ -24,4 +24,6 @@ target 'CCIP' do
   pod 'NJKWebViewProgress', '~> 0.2'
   pod 'iVersion', :git => 'https://github.com/FrankWu100/iVersion'
   pod 'AFNetworking', '~> 3.1'
+  pod 'UITableView+FDTemplateLayoutCell', '~> 1.6'
+
 end
