--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -25,5 +25,5 @@ target 'CCIP' do
   pod 'iVersion', :git => 'https://github.com/FrankWu100/iVersion'
   pod 'AFNetworking', '~> 3.1'
   pod 'UITableView+FDTemplateLayoutCell', :git => 'https://github.com/Haraguroicha/UITableView-FDTemplateLayoutCell', :tag => '1.6.1'
-
+  pod 'UIView+FDCollapsibleConstraints', '~> 1.1'
 end
