--- a/CCIP/CCIP-Watch Extension/Info.plist
+++ b/CCIP/CCIP-Watch Extension/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>XPC!</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2</string>
+	<string>$(MAIN_BUILD_SHORT_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>11</string>
+	<string>0</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
