--- a/CCIP/CCIP-Watch/Info.plist
+++ b/CCIP/CCIP-Watch/Info.plist
@@ -17,9 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2</string>
-	<key>CFBundleVersion</key>
-	<string>11</string>
+	<string>$(MAIN_BUILD_SHORT_VERSION)</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
