--- a/CCIP/CCIP/CCIP.xcconfig
+++ b/CCIP/CCIP/CCIP.xcconfig
@@ -1,5 +1,5 @@
-MAIN_PRODUCT_BUNDLE_IDENTIFIER = org.coscup.CCIP-iOS-Dev
+MAIN_PRODUCT_BUNDLE_IDENTIFIER = org.coscup.CCIP-iOS#Dev#
 WATCH_PRODUCT_BUNDLE_IDENTIFIER = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).watchkitapp
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
-MAIN_BUILD_VERSION = 2.0.20 #7d13779
-MAIN_BUILD_SHORT_VERSION = 2.0
+MAIN_BUILD_VERSION = #BUILD_VERSION#
+MAIN_BUILD_SHORT_VERSION = #BUILD_SHORT_VERSION#
