--- a/CCIP/CCIP-Watch Extension/Info.plist
+++ b/CCIP/CCIP-Watch Extension/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>$(MAIN_BUILD_SHORT_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>0</string>
+	<string>$(MAIN_BUILD_VERSION)</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
