--- a/CCIP/CCIP-Watch/Info.plist
+++ b/CCIP/CCIP-Watch/Info.plist
@@ -18,6 +18,8 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MAIN_BUILD_SHORT_VERSION)</string>
+	<key>CFBundleVersion</key>
+	<string>$(MAIN_BUILD_VERSION)</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
