--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -22,7 +22,7 @@ target 'CCIP' do
   pod 'MMMarkdown', '~> 0.5'
   pod 'CPDAcknowledgements', '~> 1.0'
   pod 'NJKWebViewProgress', '~> 0.2'
-  pod 'iVersion', :git => 'https://github.com/FrankWu100/iVersion'
+  pod 'iVersion', '~> 1.11'
   pod 'AFNetworking', '~> 3.1'
   pod 'UITableView+FDTemplateLayoutCell', :git => 'https://github.com/Haraguroicha/UITableView-FDTemplateLayoutCell', :tag => '1.6.1'
   pod 'UIView+FDCollapsibleConstraints', '~> 1.1'
