--- a/CCIP/CCIP/Settings.bundle/Root.plist
+++ b/CCIP/CCIP/Settings.bundle/Root.plist
@@ -6,7 +6,7 @@
 	<array>
 		<dict>
 			<key>DefaultValue</key>
-			<string>2.0.20 #c234c26 arm64</string>
+			<string>2.0.40 #bdfe628 armv7 arm64</string>
 			<key>Key</key>
 			<string>version_preference</string>
 			<key>Title</key>
@@ -24,7 +24,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>2017-07-23 18:15:37 GMT+8</string>
+			<string>2017-07-25 09:16:43 GMT+8</string>
 			<key>Key</key>
 			<string>build_timestamp</string>
 			<key>Title</key>
