--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -28,4 +28,5 @@ target 'CCIP' do
   pod 'UIView+FDCollapsibleConstraints', '~> 1.1'
   pod 'EFQRCode', :git => 'https://github.com/Haraguroicha/EFQRCode', :commit => 'edaaeaf'
   pod 'MWPhotoBrowser', '~> 2.1.2'
+  pod 'MBProgressHUD', '~> 0.9.2'
 end
