--- a/CCIP/CCIP/Settings.bundle/Root.plist
+++ b/CCIP/CCIP/Settings.bundle/Root.plist
@@ -6,7 +6,7 @@
 	<array>
 		<dict>
 			<key>DefaultValue</key>
-			<string>2.0.40 #ed1edb9 armv7 arm64</string>
+			<string>2.0.50 #ffe5b6b arm64</string>
 			<key>Key</key>
 			<string>version_preference</string>
 			<key>Title</key>
@@ -24,7 +24,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>2017-07-25 10:16:36 GMT+8</string>
+			<string>2017-07-27 18:08:49 GMT+8</string>
 			<key>Key</key>
 			<string>build_timestamp</string>
 			<key>Title</key>
