--- a/CCIP/Supporting Files/Info.plist
+++ b/CCIP/Supporting Files/Info.plist
@@ -48,6 +48,7 @@
 		<string>fetch</string>
 		<string>location</string>
 		<string>remote-notification</string>
+        <string>network-authentication</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -56,6 +57,7 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
+		<string>gamekit</string>
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
