--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -26,7 +26,7 @@ target 'CCIP' do
   pod 'AFNetworking', '~> 3.1'
   pod 'UITableView+FDTemplateLayoutCell', :git => 'https://github.com/Haraguroicha/UITableView-FDTemplateLayoutCell', :tag => '1.6.1'
   pod 'UIView+FDCollapsibleConstraints', '~> 1.1'
-  pod 'EFQRCode', :git => 'https://github.com/Haraguroicha/EFQRCode', :commit => 'edaaeaf'
+  pod 'EFQRCode', '~> 1.2.7'
   pod 'MWPhotoBrowser', '~> 2.1.2'
   pod 'MBProgressHUD', '~> 0.9.2'
 end
