--- a/CCIP/Supporting Files/Settings.bundle/Root.plist
+++ b/CCIP/Supporting Files/Settings.bundle/Root.plist
@@ -6,7 +6,7 @@
 	<array>
 		<dict>
 			<key>DefaultValue</key>
-			<string>2.0.50 #ae47ac4 x86_64</string>
+			<string>2.0.60 #19bd286 arm64</string>
 			<key>Key</key>
 			<string>version_preference</string>
 			<key>Title</key>
@@ -24,7 +24,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>2017-07-28 16:45:26 GMT+8</string>
+			<string>2017-07-31 03:13:17 GMT+8</string>
 			<key>Key</key>
 			<string>build_timestamp</string>
 			<key>Title</key>
