update config and split color out of code

--- a/CCIP/Supporting Files/CCIP.release.xcconfig
+++ b/CCIP/Supporting Files/CCIP.release.xcconfig
@@ -1,13 +1,22 @@
-MAIN_PRODUCT_BUNDLE_IDENTIFIER              = org.coscup.CCIP-iOS
+MAIN_PRODUCT_BUNDLE_IDENTIFIER              = org.sitcon.CCIP-iOS#Dev#
 WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).watchkitapp
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
 MAIN_BUILD_VERSION                          = 2.0.70
 MAIN_BUILD_SHORT_VERSION                    = 2.0
-APP_GROUP_ID                                = group.org.coscup.ccip
-ONE_SIGNAL_APP_TOKEN                        = '@"a429ff30-5c0e-4584-a32f-b866ba88c947"'
-__API_HOST_DOMAIN__                         = '@"ccip.coscup.org"'
-CONF_BASE_DOMAIN                            = '@"coscup.org"'
-STAFF_BASE_DOMAIN                           = '@"staff.coscup.org"'
-PUZZLE_GAME_BASE_DOMAIN                     = '@"play.coscup.org"'
-LOG_CHANNEL                                 = '@"coscup"'
-TELEGRAM_URL                                = '@"coscupchat"'
+APP_GROUP_ID                                = group.org.sitcon.ccip
+ONE_SIGNAL_APP_TOKEN                        = '@"9b74779c-bcd8-471e-a64b-e033acf0ebbd"'
+__API_HOST_DOMAIN__                         = '@"ccip.sitcon.org"'
+CONF_BASE_DOMAIN                            = '@"sitcon.org"'
+STAFF_BASE_DOMAIN                           = '@"staff.sitcon.org"'
+PUZZLE_GAME_BASE_DOMAIN                     = '@"#mainPuzzleDomain#"'
+LOG_CHANNEL                                 = '@"sitcon"'
+TELEGRAM_URL                                = '@"SITCONgeneral"'
+COLOR_DEV                                   = '@"#f2a900"'
+COLOR_TITLE_HIGHLIGHTED                     = '@"#009a79"'
+COLOR_GRADIENT1                             = '@"#64757d"'
+COLOR_GRADIENT2                             = '@"#64757d"'
+COLOR_GRADIENT3                             = '@"#64757d"'
+COLOR_DASHED_LINE                           = '@"#e9e9e9"'
+COLOR_BUTTON_TO                             = '@"#64757d"'
+COLOR_BUTTON_DEFAULT                        = '@"#64757d"'
+COLOR_BUTTON_DISABLED                       = '@"#9b9b9b"'
