--- a/CCIP/Supporting Files/CCIP.xcconfig
+++ b/CCIP/Supporting Files/CCIP.xcconfig
@@ -8,6 +8,15 @@ ONE_SIGNAL_APP_TOKEN                        = '@"#one_signal_token#"'
 __API_HOST_DOMAIN__                         = '@"ccip.#mainDomain#"'
 CONF_BASE_DOMAIN                            = '@"#mainDomain#"'
 STAFF_BASE_DOMAIN                           = '@"staff.#mainDomain#"'
-PUZZLE_GAME_BASE_DOMAIN                     = '@"play.#mainDomain#"'
+PUZZLE_GAME_BASE_DOMAIN                     = '@"#mainPuzzleDomain#"'
 LOG_CHANNEL                                 = '@"#channel#"'
 TELEGRAM_URL                                = '@"#tg_chat#"'
+COLOR_DEV                                   = '@"#color_dev#"'
+COLOR_TITLE_HIGHLIGHTED                     = '@"#color_title_highlighted#"'
+COLOR_GRADIENT1                             = '@"#color_gradient1#"'
+COLOR_GRADIENT2                             = '@"#color_gradient2#"'
+COLOR_GRADIENT3                             = '@"#color_gradient3#"'
+COLOR_DASHED_LINE                           = '@"#color_dash_line#"'
+COLOR_BUTTON_TO                             = '@"#color_button_to#"'
+COLOR_BUTTON_DEFAULT                        = '@"#color_button_default#"'
+COLOR_BUTTON_DISABLED                       = '@"#color_button_disabled#"'
