--- a/CCIP/Supporting Files/Settings.bundle/AppFlags.plist
+++ b/CCIP/Supporting Files/Settings.bundle/AppFlags.plist
@@ -14,9 +14,9 @@
 			<key>DefaultValue</key>
 			<string>1</string>
 			<key>Key</key>
-			<string>COSCUP</string>
+			<string>SITCON</string>
 			<key>Title</key>
-			<string>COSCUP</string>
+			<string>SITCON</string>
 			<key>Type</key>
 			<string>PSTitleValueSpecifier</string>
 		</dict>
@@ -32,7 +32,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>group.org.coscup.ccip</string>
+			<string>group.org.sitcon.ccip</string>
 			<key>Key</key>
 			<string>APP_GROUP_ID</string>
 			<key>Title</key>
@@ -42,7 +42,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>@a429ff30-5c0e-4584-a32f-b866ba88c947</string>
+			<string>@9b74779c-bcd8-471e-a64b-e033acf0ebbd</string>
 			<key>Key</key>
 			<string>ONE_SIGNAL_APP_TOKEN</string>
 			<key>Title</key>
@@ -52,7 +52,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>@ccip.coscup.org</string>
+			<string>@ccip.sitcon.org</string>
 			<key>Key</key>
 			<string>__API_HOST_DOMAIN__</string>
 			<key>Title</key>
@@ -62,7 +62,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>@coscup.org</string>
+			<string>@sitcon.org</string>
 			<key>Key</key>
 			<string>CONF_BASE_DOMAIN</string>
 			<key>Title</key>
@@ -72,7 +72,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>@staff.coscup.org</string>
+			<string>@staff.sitcon.org</string>
 			<key>Key</key>
 			<string>STAFF_BASE_DOMAIN</string>
 			<key>Title</key>
@@ -82,7 +82,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>@play.coscup.org</string>
+			<string>@#mainPuzzleDomain#</string>
 			<key>Key</key>
 			<string>PUZZLE_GAME_BASE_DOMAIN</string>
 			<key>Title</key>
@@ -92,7 +92,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>@coscup</string>
+			<string>@sitcon</string>
 			<key>Key</key>
 			<string>LOG_CHANNEL</string>
 			<key>Title</key>
@@ -102,11 +102,101 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>@coscupchat</string>
+			<string>@SITCONgeneral</string>
 			<key>Key</key>
 			<string>TELEGRAM_URL</string>
 			<key>Title</key>
 			<string>TELEGRAM_URL</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>@#f2a900</string>
+			<key>Key</key>
+			<string>COLOR_DEV</string>
+			<key>Title</key>
+			<string>COLOR_DEV</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>@#009a79</string>
+			<key>Key</key>
+			<string>COLOR_TITLE_HIGHLIGHTED</string>
+			<key>Title</key>
+			<string>COLOR_TITLE_HIGHLIGHTED</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>@#64757d</string>
+			<key>Key</key>
+			<string>COLOR_GRADIENT1</string>
+			<key>Title</key>
+			<string>COLOR_GRADIENT1</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>@#64757d</string>
+			<key>Key</key>
+			<string>COLOR_GRADIENT2</string>
+			<key>Title</key>
+			<string>COLOR_GRADIENT2</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>@#64757d</string>
+			<key>Key</key>
+			<string>COLOR_GRADIENT3</string>
+			<key>Title</key>
+			<string>COLOR_GRADIENT3</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>@#e9e9e9</string>
+			<key>Key</key>
+			<string>COLOR_DASHED_LINE</string>
+			<key>Title</key>
+			<string>COLOR_DASHED_LINE</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>@#64757d</string>
+			<key>Key</key>
+			<string>COLOR_BUTTON_TO</string>
+			<key>Title</key>
+			<string>COLOR_BUTTON_TO</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>@#9b9b9b</string>
+			<key>Key</key>
+			<string>COLOR_BUTTON_DISABLED</string>
+			<key>Title</key>
+			<string>COLOR_BUTTON_DISABLED</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>@#64757d</string>
+			<key>Key</key>
+			<string>COLOR_BUTTON_DEFAULT</string>
+			<key>Title</key>
+			<string>COLOR_BUTTON_DEFAULT</string>
 			<key>Type</key>
 			<string>PSTitleValueSpecifier</string>
 		</dict>
