fix UI and update tabs highlight color for SITCON 2018

--- a/CCIP/Supporting Files/CCIP.debug.xcconfig
+++ b/CCIP/Supporting Files/CCIP.debug.xcconfig
@@ -12,7 +12,7 @@ PUZZLE_GAME_BASE_DOMAIN                     = '@"#mainPuzzleDomain#"'
 LOG_CHANNEL                                 = '@"sitcon"'
 TELEGRAM_URL                                = '@"SITCONgeneral"'
 COLOR_DEV                                   = '@"#f2a900"'
-COLOR_TITLE_HIGHLIGHTED                     = '@"#009a79"'
+COLOR_TITLE_HIGHLIGHTED                     = '@"#444f54"'
 COLOR_GRADIENT1                             = '@"#64757d"'
 COLOR_GRADIENT2                             = '@"#64757d"'
 COLOR_GRADIENT3                             = '@"#64757d"'
