--- a/CCIP/Supporting Files/Settings.bundle/AppFlags.plist
+++ b/CCIP/Supporting Files/Settings.bundle/AppFlags.plist
@@ -122,7 +122,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>@#009a79</string>
+			<string>@#444f54</string>
 			<key>Key</key>
 			<string>COLOR_TITLE_HIGHLIGHTED</string>
 			<key>Title</key>
