update text color

--- a/CCIP/Supporting Files/CCIP.xcconfig
+++ b/CCIP/Supporting Files/CCIP.xcconfig
@@ -20,3 +20,5 @@ COLOR_DASHED_LINE                           = '@"#color_dash_line#"'
 COLOR_BUTTON_TO                             = '@"#color_button_to#"'
 COLOR_BUTTON_DEFAULT                        = '@"#color_button_default#"'
 COLOR_BUTTON_DISABLED                       = '@"#color_button_disabled#"'
+COLOR_CARD_TEXT                             = '@"#color_card_text#"'
+COLOR_LABEL_TEXT                            = '@"#color_label_text#"'
