--- a/CCIP/Supporting Files/CCIP.release.xcconfig
+++ b/CCIP/Supporting Files/CCIP.release.xcconfig
@@ -20,3 +20,5 @@ COLOR_DASHED_LINE                           = '@"#e9e9e9"'
 COLOR_BUTTON_TO                             = '@"#64757d"'
 COLOR_BUTTON_DEFAULT                        = '@"#64757d"'
 COLOR_BUTTON_DISABLED                       = '@"#9b9b9b"'
+COLOR_CARD_TEXT                             = '@"#64757d"'
+COLOR_LABEL_TEXT                            = '@"#color_label_text#"'
