--- a/CCIP/Supporting Files/CCIP.xcconfig
+++ b/CCIP/Supporting Files/CCIP.xcconfig
@@ -22,3 +22,4 @@ COLOR_BUTTON_DEFAULT                        = '@"#color_button_default#"'
 COLOR_BUTTON_DISABLED                       = '@"#color_button_disabled#"'
 COLOR_CARD_TEXT                             = '@"#color_card_text#"'
 COLOR_LABEL_TEXT                            = '@"#color_label_text#"'
+COLOR_FAVORITE_BUTTON                       = '@"#color_favorite_button#"'
