--- a/CCIP/Supporting Files/CCIP.release.xcconfig
+++ b/CCIP/Supporting Files/CCIP.release.xcconfig
@@ -21,4 +21,5 @@ COLOR_BUTTON_TO                             = '@"#64757d"'
 COLOR_BUTTON_DEFAULT                        = '@"#64757d"'
 COLOR_BUTTON_DISABLED                       = '@"#9b9b9b"'
 COLOR_CARD_TEXT                             = '@"#64757d"'
-COLOR_LABEL_TEXT                            = '@"#color_label_text#"'
+COLOR_LABEL_TEXT                            = '@"#64757d"'
+COLOR_FAVORITE_BUTTON                       = '@"#64757d"'
