--- a/CCIP/Supporting Files/Settings.bundle/AppFlags.plist
+++ b/CCIP/Supporting Files/Settings.bundle/AppFlags.plist
@@ -212,11 +212,21 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>@#color_label_text#</string>
+			<string>@#64757d</string>
 			<key>Key</key>
 			<string>COLOR_LABEL_TEXT</string>
 			<key>Title</key>
 			<string>COLOR_LABEL_TEXT</string>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>@#64757d</string>
+			<key>Key</key>
+			<string>COLOR_FAVORITE_BUTTON</string>
+			<key>Title</key>
+			<string>COLOR_FAVORITE_BUTTON</string>
 			<key>Type</key>
 			<string>PSTitleValueSpecifier</string>
 		</dict>
