--- a/CCIP/Supporting Files/CCIP.release.xcconfig
+++ b/CCIP/Supporting Files/CCIP.release.xcconfig
@@ -1,4 +1,4 @@
-MAIN_PRODUCT_BUNDLE_IDENTIFIER              = org.sitcon.CCIP-iOS#Dev#
+MAIN_PRODUCT_BUNDLE_IDENTIFIER              = org.sitcon.CCIP-iOS
 WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).watchkitapp
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
 MAIN_BUILD_VERSION                          = 2.0.70
