--- a/CCIP/Supporting Files/CCIP.release.xcconfig
+++ b/CCIP/Supporting Files/CCIP.release.xcconfig
@@ -22,4 +22,5 @@ COLOR_BUTTON_DEFAULT                        = '@"#64757d"'
 COLOR_BUTTON_DISABLED                       = '@"#9b9b9b"'
 COLOR_CARD_TEXT                             = '@"#64757d"'
 COLOR_LABEL_TEXT                            = '@"#64757d"'
+COLOR_NAVIGATION_BAR_ITEM                   = '@"#fdfdfd"'
 COLOR_FAVORITE_BUTTON                       = '@"#64757d"'
