update for add Web version of Staff and Sponsors View and update localizable strings

--- a/CCIP/Supporting Files/CCIP.xcconfig
+++ b/CCIP/Supporting Files/CCIP.xcconfig
@@ -4,23 +4,29 @@ WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER)
 MAIN_BUILD_VERSION                          = #BUILD_VERSION#
 MAIN_BUILD_SHORT_VERSION                    = #BUILD_SHORT_VERSION#
 APP_GROUP_ID                                = group.#domain#.ccip
-ONE_SIGNAL_APP_TOKEN                        = '@"#one_signal_token#"'
-__API_HOST_DOMAIN__                         = '@"ccip.#mainDomain#"'
-CONF_BASE_DOMAIN                            = '@"#mainDomain#"'
-STAFF_BASE_DOMAIN                           = '@"staff.#mainDomain#"'
-PUZZLE_GAME_BASE_DOMAIN                     = '@"#mainPuzzleDomain#"'
-LOG_CHANNEL                                 = '@"#channel#"'
-TELEGRAM_URL                                = '@"#tg_chat#"'
-COLOR_DEV                                   = '@"#color_dev#"'
-COLOR_TITLE_HIGHLIGHTED                     = '@"#color_title_highlighted#"'
-COLOR_GRADIENT1                             = '@"#color_gradient1#"'
-COLOR_GRADIENT2                             = '@"#color_gradient2#"'
-COLOR_GRADIENT3                             = '@"#color_gradient3#"'
-COLOR_DASHED_LINE                           = '@"#color_dash_line#"'
-COLOR_BUTTON_TO                             = '@"#color_button_to#"'
-COLOR_BUTTON_DEFAULT                        = '@"#color_button_default#"'
-COLOR_BUTTON_DISABLED                       = '@"#color_button_disabled#"'
-COLOR_CARD_TEXT                             = '@"#color_card_text#"'
-COLOR_LABEL_TEXT                            = '@"#color_label_text#"'
-COLOR_NAVIGATION_BAR_ITEM                   = '@"#color_navigation_bar_item#"'
-COLOR_FAVORITE_BUTTON                       = '@"#color_favorite_button#"'
+ONE_SIGNAL_APP_TOKEN                        = '(@"#one_signal_token#")'
+__API_HOST_DOMAIN__                         = '(@"ccip.#mainDomain#")'
+CONF_BASE_DOMAIN                            = '(@"#mainDomain#")'
+STAFF_BASE_DOMAIN                           = '(@"#mainStaffDomain#")'
+PUZZLE_GAME_BASE_DOMAIN                     = '(@"#mainPuzzleDomain#")'
+SPONSOR_WEB_BASE_URL                        = '(@"#sponsorWebUrlBase#")'
+SPONSOR_WEB_PATH                            = '(@"#sponsorWebUrl#")'
+SPONSOR_USE_WEB                             = #sponsorUseWeb#
+STAFF_WEB_BASE_URL                          = '(@"#staffWebUrlBase#")'
+STAFF_WEB_PATH                              = '(@"#staffWebUrl#")'
+STAFF_USE_WEB                               = #staffUseWeb#
+LOG_CHANNEL                                 = '(@"#channel#")'
+TELEGRAM_URL                                = '(@"#tg_chat#")'
+COLOR_DEV                                   = '(@"#color_dev#")'
+COLOR_TITLE_HIGHLIGHTED                     = '(@"#color_title_highlighted#")'
+COLOR_GRADIENT1                             = '(@"#color_gradient1#")'
+COLOR_GRADIENT2                             = '(@"#color_gradient2#")'
+COLOR_GRADIENT3                             = '(@"#color_gradient3#")'
+COLOR_DASHED_LINE                           = '(@"#color_dash_line#")'
+COLOR_BUTTON_TO                             = '(@"#color_button_to#")'
+COLOR_BUTTON_DEFAULT                        = '(@"#color_button_default#")'
+COLOR_BUTTON_DISABLED                       = '(@"#color_button_disabled#")'
+COLOR_CARD_TEXT                             = '(@"#color_card_text#")'
+COLOR_LABEL_TEXT                            = '(@"#color_label_text#")'
+COLOR_NAVIGATION_BAR_ITEM                   = '(@"#color_navigation_bar_item#")'
+COLOR_FAVORITE_BUTTON                       = '(@"#color_favorite_button#")'
