--- a/CCIP/CCIP/Tabs/MoreTab/AcknowledgementsView/Project_Info_and_Contributors.json
+++ b/CCIP/CCIP/Tabs/MoreTab/AcknowledgementsView/Project_Info_and_Contributors.json
@@ -3,7 +3,7 @@
 		"project_name": "CCIP-iOS",
 		"github_repo": "CPRTeam/CCIP-iOS",
 		"site": "",
-		"contributors": [1, 2, 5]
+		"contributors": [2, 1, 5, 3, 4]
 	},
 	"contributors" : [
 		{
