--- a/CCIP/Supporting Files/CCIP.entitlements
+++ b/CCIP/Supporting Files/CCIP.entitlements
@@ -7,11 +7,14 @@
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.org.coscup.ccip</string>
+		<string>group.org.sitcon.ccip</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)org.coscup.CCIP-iOS-Dev</string>
 		<string>$(AppIdentifierPrefix)org.coscup.CCIP-iOS</string>
+		<string>$(AppIdentifierPrefix)org.sitcon.CCIP-iOS-Dev</string>
+		<string>$(AppIdentifierPrefix)org.sitcon.CCIP-iOS</string>
 	</array>
 </dict>
 </plist>
