--- a/CCIP/Supporting Files/CCIP.entitlements
+++ b/CCIP/Supporting Files/CCIP.entitlements
@@ -4,6 +4,10 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.networking.HotspotConfiguration</key>
+	<true/>
+	<key>com.apple.developer.networking.networkextension</key>
+	<array/>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.org.coscup.ccip</string>
